todos/todos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos
  namespace: todos
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
      - name: todos
        image: lauravrv/todos-app:v1
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
