todos/todos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-service
  namespace: todos
spec:
  selector:
    app: todos
  ports:
  - port: 8082
    targetPort: 8082
